# ChangeLog for media-plugins/gst-plugins-neon
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-neon/ChangeLog,v 1.45 2010/08/01 20:32:39 klausman Exp $

  01 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-neon-0.10.18.ebuild:
  Stable on alpha, bug #324691

  01 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-neon-0.10.18.ebuild:
  x86 stable, bug 324691

  27 Jun 2010; <nixnut@gentoo.org> gst-plugins-neon-0.10.18.ebuild:
  ppc stable #324691

  24 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-neon-0.10.18.ebuild:
  Stable on amd64 wrt bug #324691

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gst-plugins-neon-0.10.14.ebuild, gst-plugins-neon-0.10.17.ebuild,
  gst-plugins-neon-0.10.18.ebuild:
  net-misc/neon renamed to net-libs/neon.

  18 Apr 2010; <nixnut@gentoo.org> gst-plugins-neon-0.10.17.ebuild:
  ppc stable #308379

*gst-plugins-neon-0.10.18 (05 Apr 2010)

  05 Apr 2010; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-neon-0.10.18.ebuild:
  Version bump to be in sync with the rest; no code changes

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-neon-0.10.17.ebuild:
  stable x86, bug 308379

  19 Mar 2010; Pacho Ramos <pacho@gentoo.org>
  gst-plugins-neon-0.10.17.ebuild:
  amd64 stable, bug 308379

  04 Mar 2010; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-neon-0.10.11.ebuild:
  Remove old

*gst-plugins-neon-0.10.17 (23 Jan 2010)

  23 Jan 2010; Olivier Crête <tester@gentoo.org>
  +gst-plugins-neon-0.10.17.ebuild:
  Version bump, bug #290084

  05 Jan 2010; nixnut <nixnut@gentoo.org> gst-plugins-neon-0.10.14.ebuild:
  ppc stable #290343

  29 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-neon-0.10.14.ebuild:
  Stable on alpha, bug #290343

  18 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-neon-0.10.14.ebuild:
  x86 stable, bug 290343
