@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-neon
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-neon/ChangeLog,v 1.45 2010/08/01 20:32:39 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-neon/ChangeLog,v 1.46 2010/08/03 02:17:09 leio Exp $
+
+*gst-plugins-neon-0.10.19 (03 Aug 2010)
+
+  03 Aug 2010; Mart Raudsepp <leio@gentoo.org>
+  +gst-plugins-neon-0.10.19.ebuild:
+  Version bump. No noteworthy changes.
 
   01 Aug 2010; Tobias Klausmann <klausman@gentoo.org>
   gst-plugins-neon-0.10.18.ebuild:
